--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
+    "react-custom-roulette": "^1.1.2",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
